Halfway through documentation for upcoming version 0.9.21.

--- a/tex/docs-structure.tex
+++ b/tex/docs-structure.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-04-20
-% \update      2016-02-28
+% \update      2016-11-12
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -141,7 +141,7 @@
 
 \newcommand{\figureref}[1] {
    figure~\ref{#1}
-   ("\nameref{#1}")
+   "\nameref{#1}"
    on page~\pageref{#1}\ignorespaces
 }
 
@@ -150,7 +150,7 @@
 
 \newcommand{\sectionref}[1] {%
    section~\ref{#1}
-   ("\nameref{#1}")
+   "\nameref{#1}"
    on page~\pageref{#1}\ignorespaces
 }
 
@@ -160,7 +160,7 @@
 
 \newcommand{\paragraphref}[1] {%
    paragraph~\ref{#1}
-   ("\nameref{#1}")
+   "\nameref{#1}"
    on page~\pageref{#1}\ignorespaces
 }
 
@@ -169,7 +169,7 @@
 
 \newcommand{\tableref}[1] {%
    table~\ref{#1}
-   ("\nameref{#1}")
+   "\nameref{#1}"
    on page~\pageref{#1}\ignorespaces
 }
 
