--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2016-10-31
+% \update      2016-11-12
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -50,7 +50,7 @@
 
 \begin{document}
 
-\title{Sequencer64 User Manual 0.9.20}
+\title{Sequencer64 User Manual 0.9.21}
 \author{Chris Ahlstrom \\
    (\texttt{ahlstromcj@gmail.com})}
 \date{\today}
@@ -78,7 +78,7 @@
 \label{sec:introduction}
 
    This document describes how to use \textsl{Sequencer64}
-   \cite{sequencer64}, through version 0.9.20,
+   \cite{sequencer64}, through version 0.9.21,
    using the latest commit from the
    \textbf{master} or \textbf{fixups} branches.
    If one is impatient to get started mastering \textsl{Sequencer64},
@@ -133,7 +133,7 @@
    With \textsl{Sequencer64}, one creates several patterns, and then
    combines them.
 
-   Now, unfortunately, \textsl{Seq24} spent some time in limbo
+   Unfortunately, \textsl{Seq24} spent some time in limbo
    (2010 was the last major update, with a
    recent update to fix a MIDI clock issue).  There are a number of
    forks for it on \textsl{GitHub}, and some conversions
@@ -153,9 +153,10 @@
    support for the "user" configuration file, and a way to edit parts of the
    MIDI file textually.
 
-   We view \textsl{Seq24} as a kind of "vi" of MIDI editing... spare, lean, and
-   powerful.  Without \textsl{Seq24} and its authors, \textsl{Sequencer64}
-   would never have come into being.
+   Secondly, we view \textsl{Seq24} as a kind of "vi" of MIDI editing... spare,
+   lean, and powerful.  It deserves to be a living project.  Thus, without
+   \textsl{Seq24} and its authors, \textsl{Sequencer64} would never have come
+   into being.
 
 \subsection{Improvements}
 \label{subsec:improvements}
@@ -164,13 +165,12 @@
    \textsl{Sequencer64}.
 
    \begin{itemize}
-      \item A new \textsl{event editor} dialog was added.
-         It detailed viewing and editing of MIDI events.
+      \item A new \textsl{event editor} dialog
+         provides viewing and editing of MIDI events as text.
          This editor is basic, but useful.
-      \item \textsl{Sequencer64} reads SMF 0 MIDI files.  It splits
-         the file into tracks based on channel number.  Each track becomes one
-         sequence/pattern in the main window grid.
-      \item A "Tap" button for setting the BPM by tapping a button or a key.
+      \item \textsl{Sequencer64} reads SMF 0 MIDI files, splitting
+         the file into patterns based on channel number.
+      \item A "Tap" button sets the BPM by tapping a button or a key.
       \item Some features have been ported from \textsl{Stazed}'s
       \textsl{Seq32} \cite{seq32} project.  Some features can be disabled at
       configure/build time, if desired.
@@ -185,32 +185,32 @@
             ported to \textsl{Sequencer64}.
          \item The ability to split triggers at the nearest snap, instead
             simply splitting them in half.
+         \item Editing the amplitude of data events using a simple
+            low-frequency oscillator (LFO).
          \item A large number of other \textsl{Seq32} features have been
             ported, but they are currently commented out until we can test them
             and make sure they are "perfect".
          \begin{itemize}
-            \item Enhanced JACK support.
+            \item Enhanced JACK transport support.
             \item Diverting multi-channel recorded MIDI so that each channel
                is stored in the sequence/pattern configured for that channel
             \item Randomizing MIDI events.
             \item Selection extensions such as selecting odd/even notes, and
-            handles on data events.
+               handles on data events.
             \item More feature for controlling transport.
-            \item Support for editing the amplitude of data events using a
-               low-frequency oscillator (LFO).
          \end{itemize}
       \end{itemize}
-      \item One can optionally bring up two song editor windows, to have a view
+      \item An optional second song editor window, to have a view
          of two different parts of a large song while arranging it.
-      \item The Set Tempo and Time Signature events of normal MIDI files are
-         now processed and incorporated into the user-interface and are saved
+      \item Set Tempo and Time Signature events are
+         now processed, incorporated into the user-interface, and are saved
          as standard MIDI data.
-      \item One can now save the scale, key, and background sequence
-         settings to the \textsl{Sequencer64} MIDI file, either globally or
-         per-sequence.
-      \item In the sequence/pattern and song editors, the window now scrolls to
-         keep up with the progress bar for sequences that are longer than the
-         width of the sequence editor window.
+      \item The scale, key, and background sequence
+         settings are now saved to the \textsl{Sequencer64} MIDI file, either
+         globally or per-sequence.
+      \item In the sequence/pattern and song editors, the piano roll
+         now scrolls to keep up with the progress bar for patterns longer than
+         the width of the sequence editor window.
       \item Additional mouse and keystroke support in the pattern and song
          editor windows:
       \begin{itemize}
@@ -222,36 +222,36 @@
             Enter keys.
          \item Additional keystroke support for entering and exiting "paint"
             mode.
-         \item Usage of the Mod4/Super/Windows key to keep editing
-            (painting) mode enabled after releasing the right mouse button, for
-            some of the modern crappy touchpads shipped with "gamer" laptops.
-         \item Shift-left-click on a pattern slot (in the pattern editor),
-            or on the pattern name or M (mute) (in the song editor)
+         \item Usage of the Mod4 (Super, Windows) key to keep editing
+            (painting) mode enabled after releasing the right mouse button;
+            useful with some "modern" crappy uni-touchpads.
+         \item Shift-left-click on a pattern slot (pattern editor),
+            or on the pattern name or M (mute) (song editor)
             to toggle the status of all of the other active slots.
             Useful for listening to a single track by itself.
          \item Right-click on a the virtual keyboard in the pattern editor
             toggles between showing letters/octaves (e.g. "C4") versus
             the MIDI note numbers.  
       \end{itemize}
-      \item The "user" configuration is now written to disk, and we will
-         add more settings to it as time goes on.  It currently offers the
+      \item The "user" configuration is now written to disk, and 
+         settings are added to it as time goes on.  It currently offers the
          long-standing feature of customizable buss, instrument, and controller
          information, plus some customizations of the user-interface, such as
-         font and display of the main window's pattern grid.  It also supports
-         colored and thicker progress bars and modification of the default 40
-         millisecond window redraw rate.
+         font, display of the main window's pattern grid, colored and thicker
+         progress bars, and modification of the default 40 millisecond window
+         redraw rate.
       \item Support for mapping MIDI events to a single MIDI buss for testing
          or simple use cases.
       \item On-going support for handling PPQN values other than the
          default value of 192.  Still not comprehensive, but very usable.
       \item Small improvements in appearance:
       \begin{itemize}
-         \item Support for showing empty sequences (i.e. having only meta
-            events) in a highlight color (yellow).
-         \item Support for showing the currently-focussed (for editing in the
-            pattern editor) sequence.  It is highlighted in black-on-cyan if
-            not armed, and in cyan-on-black if armed, and the highlighting
-            appears in both the pattern and song editors.
+         \item Support for showing empty (having only meta
+            events) sequences in a highlight color (yellow).
+         \item Support for highlighting the currently-focussed pattern editor
+            window, in black-on-cyan if not armed, and in cyan-on-black if
+            armed.  The highlighting appears in both the pattern and song
+            editors.
          \item Sequences that are shorter than a quarter note are now padded to
             one full measure, for smoother scrolling on the patterns panel.
          \item Modification of the colors of the scale and background sequence
@@ -272,15 +272,14 @@
          files.
       \item More musical scales (harmonic minor, melodic minor,
          whole tone, etc.) have been added.
-      \item A pause feature has been added to ALSA-mode playback.  It works
-         almost completely, but is still undergoing testing.  It also includes
-         a pause keystroke (".") and a pause button.
+      \item A pause feature has been added to ALSA-mode playback.
+         It also includes a pause keystroke (".") and a pause button.
       \item Internal improvements.
       \begin{itemize}
          \item Provided a new, more MIDI-compliant output format for the MIDI
             files.  The old format can still be read, and, with a "legacy"
             option, be written.
-         \item Changed the type of MIDI event container used, which greatly
+         \item Changed the handling of the MIDI event container, which greatly
             speeds up the loading of a MIDI file, especially in debug mode.
 %           If the new container reduces the maximum output of the sequencer,
 %           we will dump the slow container into a vector container for faster
@@ -311,15 +310,15 @@
    In the future, version 1.0 will be even more object-oriented, hopefully
    faster, and easier to modify.  Eventually, we might get it to build
    for Windows, using MingW, though this is a low priority and a fairly
-   significant task.  We've also been asked to incorporate support for a
-   scripting language, for OSC (Open Sound Control), and for NSM (the Non
-   Session Manager).
+   significant task.  We've also been asked to incorporate support for native
+   JACK MIDI, a scripting language, for OSC (Open Sound Control), and for NSM
+   (the Non Session Manager).
 
    One more note.  \textsl{Sequencer64} is extremely customizable, and
    it features can be configured by defining macro names in the source code,
    by enabling/disabling options at build-configuration time, and by many new
-   command-line arguments.  We cannot show all permutations of setting in this
-   small document, so don't be surprised if some screenshots don't quite match
+   command-line arguments.  We cannot show all permutations of settings in this
+   document, so don't be surprised if some screenshots don't quite match
    your setup.
 
 \subsection{Document Structure}
@@ -376,7 +375,7 @@
    all events to that buss:
 
 \begin{verbatim}
-   $ sequencer64 --bus 5 b4uacuse-seq24.midi &
+   $ sequencer64 --alsa --bus 5 contrib/midi/b4uacuse-seq24.midi &
 \end{verbatim}
 
 \begin{figure}[H]
@@ -400,7 +399,7 @@
    One new item (v. 0.9.19) not shown is the mode of the application:
    "JACK", "Master" (i.e. JACK Master), or "ALSA".
    A new item that \textsl{is} shown is the button with a "0" as its label.
-   This is the new "Tap Tempo" button.
+   This is the new \textbf{Tap Tempo} button.
 
 % This Tip needs to be put elsewhere.
 
@@ -408,7 +407,7 @@
    \index{tips!tooltips}
    \index{tooltips}
    As with most user-interfaces, holding the mouse over some user-interface
-   elements for a short period will let one view a short description (tooltip)
+   elements for a short period will let one view a description (tooltip)
    of what it does.
 
 % The following "input" sections are stored in separate files of the same
